added maxar specific resume

--- a/jun2021/maxar.tex
+++ b/jun2021/maxar.tex
@@ -47,7 +47,6 @@ SF Bay Area, CA
 \textbf{University of California, Santa Cruz} \hfill  Santa Cruz, CA\\
 \textit{Masters of Arts in Mathematics} \hfill  Sep 2021 - June 2022
 
-
 \textbf{Computer Science Courses}
 \begin{itemize}
     \item Data Structures, Algorithms, Analysis of Algorithms (all in C)
@@ -84,14 +83,14 @@ SF Bay Area, CA
     \item Discovered major vendor error on critical hardware of spacecraft that had to be taken off and fixed
     \item Wrote over 3k lines of Tcl code to perform negative testing of spacecraft commanding
 \end{itemize}
-
-\textbf{Jose Valdes Math Institute} \hfill Stanford University\\
-\textit{Classroom Program Assitant} \hfill Summer 2018, Summer 2019
-\begin{itemize}
-    \item Taught math lessons to a class of 20 middle-schoolers, some in Spanish
-    \item Chaperoned the class to anywhere we needed to be on Stanford campus
-\end{itemize}
-
+%
+%\textbf{Jose Valdes Math Institute} \hfill Stanford University\\
+%\textit{Classroom Program Assitant} \hfill Summer 2018, Summer 2019
+%\begin{itemize}
+%    \item Taught math lessons to a class of 20 middle-schoolers, some in Spanish
+%    \item Chaperoned the class to anywhere we needed to be on Stanford campus
+%\end{itemize}
+%
 
 \section*{Coding Projects} \hrulefill 
 
