added objective statement

--- a/jun2021/maxar.tex
+++ b/jun2021/maxar.tex
@@ -39,6 +39,10 @@ SF Bay Area, CA
 \end{minipage}
 
 
+\section*{Objective} \hrulefill 
+
+Looking for full-time work after I graduate from my Master's in June 2021. Ground Software is my top preference, but open to anything.
+
 \section*{Education} \hrulefill 
 
 \textbf{University of California, Santa Cruz} \hfill  Santa Cruz, CA\\
@@ -104,17 +108,10 @@ SF Bay Area, CA
     \item Uses natural language processing API from IBM to map input phrases to the most similar lyric
 \end{itemize}
 
-\textbf{Self-Hosted Minecraft Server}
-\begin{itemize}
-    \item Hosted and handled all sys-admin things for 80+ player minecraft server
-    \item Wrote bash scripts to handle backups and had MySQL database for permissions
-\end{itemize}
-
 \section*{Skills} \hrulefill 
 \begin{itemize}
     \item Java, C, Python, Javascript, Tcl, MatLab, Bash, SQL
     \item TensorFlow, Numpy, Pandas, Flask
-    \item Fluent in Spanish
 \end{itemize}
 
 \end{document}
