--- a/jun2021/maxar.tex
+++ b/jun2021/maxar.tex
@@ -41,15 +41,15 @@ SF Bay Area, CA
 
 \section*{Objective} \hrulefill 
 
-Looking for full-time work after I graduate from my Master's in June 2021. Ground Software is my top preference, but open to anything.
+Looking for full-time work after I graduate from my Master's in June 2021. I am interested in Ground Software, Flight Software, DCA (Dynamics Control Analysis), and the Guidance and navigation teams.
 
 \section*{Education} \hrulefill 
 
 \textbf{University of California, Santa Cruz} \hfill  Santa Cruz, CA\\
-\textit{Masters of Arts in Mathematics} \hfill  Sep 2021 - June 2022
+\textit{Master's of Arts in Mathematics} \hfill  Sep 2021 - June 2022
 
 \textbf{University of California, Santa Cruz} \hfill  Santa Cruz, CA\\
-\textit{Bachelors of Science in Mathematics with Magna Cum Laude} \hfill  Sep 2018 - June 2021
+\textit{Bachelor's of Science in Mathematics with Magna Cum Laude} \hfill  Sep 2018 - June 2021
 
 \textbf{Computer Science Courses}
 \begin{itemize}
@@ -80,7 +80,8 @@ Looking for full-time work after I graduate from my Master's in June 2021. Groun
 \textbf{Maxar Technologies, Space Program Delivery}\\
 \textit{Returning Software Engineer Intern} \hfill Remote, Summer 2021
 \begin{itemize}
-    \item CURRENT 
+    \item Built a web tool from scratch to help with the processing and ingestion of redline files for the database
+    \item Learned about LDAP authentication, Object-relational mappers, and web front-end
 \end{itemize}
 \textit{Software Engineer Intern} \hfill Remote, Summer 2020
 \begin{itemize}
@@ -108,10 +109,16 @@ Looking for full-time work after I graduate from my Master's in June 2021. Groun
     \item Uses natural language processing API from IBM to map input phrases to the most similar lyric
 \end{itemize}
 
-\section*{Skills} \hrulefill 
+\textbf{Minecraft CPU} \hfill 
 \begin{itemize}
-    \item Java, C, Python, Javascript, Tcl, MatLab, Bash, SQL
-    \item TensorFlow, Numpy, Pandas, Flask
+    \item Built an entire CPU in the game minecraft from only NAND gates and D-flip flops
+    \item Wrote an assembler in Java for custom machine language to write a fibonacci number generator program
 \end{itemize}
-
+%
+%\section*{Skills} \hrulefill 
+%\begin{itemize}
+%    \item Java, C, Python, Javascript, Tcl, MatLab, Bash, SQL
+%    \item TensorFlow, Numpy, Pandas, Flask
+%\end{itemize}
+%
 \end{document}
