--- a/jun2021/totality.tex
+++ b/jun2021/totality.tex
@@ -42,7 +42,7 @@ SF Bay Area, CA
 \section*{Education} \hrulefill 
 
 \textbf{University of California, Santa Cruz} \hfill  Santa Cruz, CA\\
-\textit{Masters of Arts in Mathematics} \hfill  Sep 2021 - June 2022
+\textit{Masters of Science in Mathematics} \hfill  Sep 2021 - June 2022
 
 \textbf{University of California, Santa Cruz} \hfill  Santa Cruz, CA\\
 \textit{Bachelors of Science in Mathematics with Magna Cum Laude} \hfill  Sep 2018 - June 2021
