--- a/feb2022/totality.tex
+++ b/feb2022/totality.tex
@@ -47,12 +47,12 @@ SF Bay Area, CA
 \textbf{University of California, Santa Cruz} \hfill  Santa Cruz, CA\\
 \textit{Bachelors of Science in Mathematics with Magna Cum Laude} \hfill  Sep 18, 2018 - June 11, 2021
 
-\textbf{Computer Science Courses}
-\begin{itemize}
-    \item Data Structures, Algorithms, Analysis of Algorithms (all in C)
-    \item Machine Learning class using TensorFlow, placed highly in an in-class image classification competition
-    \item Top student in Analysis of Algorithms and gave a presentation about the FFT
-\end{itemize}
+%\textbf{Computer Science Courses}
+%\begin{itemize}
+%    \item Data Structures, Algorithms, Analysis of Algorithms (all in C)
+%    \item Machine Learning class using TensorFlow, placed highly in an in-class image classification competition
+%    \item Top student in Analysis of Algorithms and gave a presentation about the FFT
+%\end{itemize}
 %
 %\textbf{Physics Courses}
 %\begin{itemize}
@@ -106,7 +106,13 @@ SF Bay Area, CA
 \begin{itemize}
     \item Uses natural language processing API from IBM to map input phrases to the most similar lyric
 \end{itemize}
-%
+
+\textbf{Minecraft Computer}
+\begin{itemize}
+    \item I followed the textbook \textit{Elements of Computing Systems} by Noam Nisan and Shimon Schocken to construct a complete, general purpose computer from NAND gates in the video game Minecraft.
+    \item Programmed an assembler and then wrote a program to compute the $n$th Fibonacci number.
+\end{itemize}
+
 %\textbf{Self-Hosted Minecraft Server}
 %\begin{itemize}
 %    \item Hosted and handled all sys-admin things for 80+ player minecraft server
